tests/extensions/plus_plus/valid/decrement1.wacc
begin
    int i = 5;
    i-- # i = i + 1
end