tests/extensions/plus_plus/syntaxErr/plusMinusErr.wacc
# Exit Code:
# 100

begin
    int i = 5;
    i+-;
end